Added JavaFX integration with default demo gui from IntelliJ + added code to module for jlink compatibility + fixed code to uses resources and made it consistent